--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div id="logo">
             <a href="index.html"><img src="img/Logo.png" alt="Tu bici" width="80" height="80" /></a>
           </div>
-          <nav class="navbar navbar-expand-lg menuHamb">
+          <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,9 +133,9 @@
         <footer>
             <h6>Copyright 2022 - www.tubici.com TODOS LOS DERECHOS RESERVADOS.<br>Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</br></h6>
             <div class="redes"> 
-                <img src="./img/face.png" alt="Facebook">
-                <img src="./img/insta.png" alt="Instagram">
-                <img src="./img/mail.png" alt="mail">
+                <img src="./img/face.png" alt="Facebook" width="34" height="34">
+                <img src="./img/insta.png" alt="Instagram" width="34" height="34">
+                <img src="./img/mail.png" alt="mail" width="40" height="31">
             </div>    
         </footer>
     </div>
