--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -19,7 +19,7 @@
         <div id="logo">
             <a href="../index.html"><img src="../img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
         </div>
-        <nav class="navbar navbar-expand-lg menuHamb">
+        <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -101,10 +101,10 @@
      <footer>
         <h6>Copyright 2022 - www.tubici.com TODOS LOS DERECHOS RESERVADOS.<br>Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</br></h6>
         <div class="redes"> 
-            <img src="../img/face.png" alt="Facebook">
-            <img src="../img/insta.png" alt="Instagram">
-            <img src="../img/mail.png" alt="mail">
-        </div>
+                <img src="../img/face.png" alt="Facebook" width="34" height="34">
+                <img src="../img/insta.png" alt="Instagram" width="34" height="34">
+                <img src="../img/mail.png" alt="mail" width="40" height="31">
+            </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
